# sponsrdump

./: .gitignore  AUTHORS  AUTHORS.md  CHANGELOG.md  Dockerfile  LICENSE  Makefile  README.md  README.rst  pyproject.toml  requirements.txt  ruff.toml  sponsrdump.py
.github/workflows/: python-package.yml
sponsrdump/: __init__.py  config.py  const.py  dumper.py  exceptions.py  file_manager.py  parser.py  text_converter.py  text_to_video.py  utils.py  video.py  video_downloader.py
src/sponsrdump/: base.py  cli.py  exceptions.py  utils.py
src/sponsrdump/converters/: __init__.py  base.py  html.py  markdown.py
tests/: conftest.py  test_basic.py  test_cli.py  test_kinescope_hls.py  test_utils.py
tests/datafixtures/: kinescope_embed.html  kinescope_embed_dash.html  kinescope_embed_nosource.html  master.m3u8  media_audio.m3u8  media_video.m3u8  project.html  some_mpd.xml
tools/: debug.py
