[project]
name = "sponsrdump"
version = "1.0.0"
description = "Dump content from sponsr.ru projects"
readme = "README.md"
requires-python = ">=3.6"
dependencies = [
    "requests>=2.28.0",
    "beautifulsoup4>=4.11.0",
    "html2text>=2020.1.16",
    "lxml>=4.9.0",
    "mpegdash>=0.3.0",
    "tqdm>=4.65.0"
]