[project]
name = "sponsrdump"
dynamic = ["version"]
description = "Make local backup copies for materials from sponsr.ru"
authors = [
    { name = "Igor Starikov", email = "idlesign@yandex.ru" }
]
readme = "README.md"
license = "BSD-3-Clause"
license-files = ["LICENSE"]
requires-python = ">=3.11"
keywords = ["backup"]
dependencies = [
    "beautifulsoup4>=4.12.2",
    "html2text>=2020.1.16",
    "lxml>=4.9.3",
    "requests>=2.31.0",
]

[project.urls]
Homepage = "https://github.com/idlesign/sponsrdump"

[project.scripts]
sponsrdump = "sponsrdump.cli:main"

[dependency-groups]
dev = [
    {include-group = "linters"},
    {include-group = "tests"},
]
linters = [
    "ruff",
]
tests = [
    "pytest",
    "pytest-responsemock",
    "pytest-datafixtures",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/sponsrdump/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/sponsrdump"]

[tool.hatch.build.targets.sdist]
packages = ["src/"]

[tool.pytest.ini_options]
testpaths = [
    "tests",
]

[tool.coverage.run]
source = [
    "src/",
]
omit = [
    "*/cli.py",
]

[tool.coverage.report]
fail_under = 99.00
exclude_also = [
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]

[tool.tox]
skip_missing_interpreters = true
env_list = [
  "py311",
  "py312",
  "py313",
]

[tool.tox.env_run_base]
dependency_groups = ["tests"]
commands = [
  ["pytest", { replace = "posargs", default = ["tests"], extend = true }],
]
